[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lazurite"
description = "Unofficial shader development tool for Minecraft: Bedrock Edition with RenderDragon graphics engine"
keywords = ["shader", "minecraft", "bedrock", "renderdragon"]
version = "0.8.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "veka0" }]

classifiers = [
    # General
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    # Python Versions
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # OS
    "Operating System :: Android",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # Topics
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
]
dependencies = ["pyjson5", "myers", "pcpp", "pycryptodome", "sympy"]

[project.optional-dependencies]
opengl = ["moderngl"]


[project.urls]
Documentation = "https://veka0.github.io/lazurite"
Repository = "https://github.com/veka0/lazurite"


[project.scripts]
lazurite = "lazurite.cli:main"
